# maid

./: .gitignore  Cargo.toml  Maidfile.toml  README.md  exact-maid  maidfile  maidfile.json  maidfile.toml  maidfile.yml
crates/exit-test/src/: main.rs
crates/maid/client/: Cargo.toml
crates/maid/client/src/: globals.rs  main.rs  shell.rs  structs.rs  table.rs
crates/maid/client/src/cli/: butler.rs  mod.rs  run.rs  tasks.rs
crates/maid/client/src/helpers/: logger.rs  maidfile.rs  mod.rs  string.rs
crates/maid/client/src/parse/: file.rs  import.rs
crates/maid/client/src/server/: cli.rs  file.rs  mod.rs  parse.rs
crates/maid/client/src/server/api/: health.rs
crates/maid/client/src/task/: mod.rs
crates/maid/monorepo/: .gitignore  Cargo.toml
crates/maid/server/: Cargo.toml
crates/maid/server/src/: globals.rs  main.rs  structs.rs  table.rs
crates/maid/server/src/docker/: container.rs  mod.rs  run.rs
crates/maid/server/src/helpers/: file.rs  format.rs  mod.rs  os.rs
crates/pretty_number/: Cargo.toml
crates/pretty_number/src/: lib.rs
crates/server/: Cargo.toml
crates/testing/exit_test/: .gitignore  Cargo.toml
crates/testing/exit_test/src/: main.rs
scripts/: build.toml  publish.toml  test.toml
src/: helpers.rs  main.rs  structs.rs  table.rs
src/api/: health.rs
src/cli/: butler.rs  import.rs  mod.rs  run.rs  tasks.rs
src/helpers/: file.rs  maidfile.rs  mod.rs  status.rs  string.rs
src/parse/: file.rs  import.rs
src/server/: cli.rs  mod.rs  parse.rs
src/task/: cache.rs  progress.rs
tests/: debug.toml  debug.yml  import.toml  import.yml  maidfile.json5  server.ts  test.tgz
tests/exit-test/: Cargo.toml
tests/mock_server/src/: index.ts
