[workspace]
members = [
    "crates/maid/client",
    "crates/maid/server",
    "crates/packages/pretty_number",
    "crates/testing/exit_test",
]

[workspace.package]
version = "0.7.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/exact-rs/maid"
description = "🔨 An easy to use make alternative."

[workspace.dependencies]
# local
pretty_number = { package = "pretty_number", path = "./crates/packages/pretty_number", version = "0.1.0" }

# remote
clap = { version = "4.3.5", features = ["derive"] }
clap-verbosity-flag = "2.0.1"
env_logger = "0.10.0"
log = "0.4.19"
