[workspace]
resolver = "2"
members = [
    "crates/maid/client",
    "crates/maid/server",
    "crates/packages/pretty_number",
    "crates/packages/global_placeholders",
    "crates/testing/exit_test",
]

[workspace.package]
version = "1.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/exact-rs/maid"
description = "🔨 An easy to use make alternative."

[workspace.dependencies]
# local
pretty_number = { package = "pretty_number", path = "./crates/packages/pretty_number", version = "0.1.0" }
global_placeholders = { package = "global_placeholders", path = "./crates/packages/global_placeholders", version = "0.1.0" }

# remote
url = "2.4.1"
log = "0.4.20"
tar = "0.4.40"
colored = "2.0.4"
flate2 = "1.0.28"
env_logger = "0.10.0"
clap-verbosity-flag = "2.0.1"
clap = { version = "4.4.6", features = ["derive"] }
uuid = { version = "1.4.1", features = ["v4", "fast-rng"] }
reqwest = { version = "0.11.22", features = ["json", "blocking"] }