[package]
name = "exact-maid"
edition = "2021"
version.workspace = true
description.workspace = true

[dependencies]
pretty_number.workspace = true
global_placeholders.workspace = true

log = "0.4.17"
home = "0.5.4"
toml = "0.5.11"
notify = "5.1.0"
inquire = "0.5.3"
serde = "1.0.152"
anyhow = "1.0.70"
fs_extra = "1.3.0"
termcolor = "1.2.0"
macros-rs = "0.4.0"
env_logger = "0.10.0"
serde_json = "1.0.96"
serde_yaml = "0.9.21"
merkle_hash = "3.5.0"
merge-struct = "0.1.0"
data-encoding = "2.3.3"
serde_derive = "1.0.152"
text_placeholder = "0.4.0"
strip-ansi-escapes = "0.1.1"
clap-verbosity-flag = "2.0.0"
notify-debouncer-mini = "0.2.1"
clap = { version = "4.1.1", features = ["derive"] }
human_bytes = { version = "0.4.1", default-features = false }
indicatif = "0.17.3"
reqwest = { version = "0.11.16", features = ["json", "blocking"] }
json5 = "0.4.1"
colored = "2.0.0"
colored-macro = "0.1.0"
