[package]
name = "maid"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
tar.workspace = true
url.workspace = true
log.workspace = true
uuid.workspace = true
clap.workspace = true
flate2.workspace = true
reqwest.workspace = true
colored.workspace = true
env_logger.workspace = true
pretty_number.workspace = true
global_placeholders.workspace = true

home = "0.5.5"
toml = "0.8.6"
json5 = "0.4.1"
notify = "6.1.1"
inquire = "0.6.2"
anyhow = "1.0.75"
fs_extra = "1.3.0"
termcolor = "1.3.0"
macros-rs = "0.4.0"
indicatif = "0.17.7"
serde_json = "1.0.108"
serde_yaml = "0.9.27"
merkle_hash = "3.5.0"
merge-struct = "0.1.0"
data-encoding = "2.4.0"
text_placeholder = "0.5.0"
strip-ansi-escapes = "0.2.0"
clap-verbosity-flag = "2.1.0"
notify-debouncer-mini = "0.4.1"
serde = { version = "1.0.192", features = ["derive"] }
human_bytes = { version = "0.4.3", default-features = false }
tungstenite = { version = "0.20.1", features = ["native-tls"] }

[build-dependencies]
chrono = "0.4.23"