[package]
name = "maid_server"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "🔨 Build server for maid"

[dependencies]
clap.workspace = true
clap-verbosity-flag.workspace = true
env_logger.workspace = true
log.workspace = true
flate2.workspace = true

# make workspace
warp = "0.3.6"
ntapi = "0.4.1"
libc = "0.2.149"
winapi = "0.3.9"
chrono = "0.4.31"
bollard = "0.15.0"
macros-rs = "0.4.0"
tungstenite = "0.20.1"
serde_json = "1.0.107"
futures-util = "0.3.28"
tokio = { version = "1.33.0", features = ["full"] }