[package]
name = "maid_server"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "🔨 Build server for maid"

[dependencies]
tar.workspace = true
log.workspace = true
uuid.workspace = true
clap.workspace = true
flate2.workspace = true
colored.workspace = true
clap-verbosity-flag.workspace = true
global_placeholders.workspace = true

# make workspace
home = "0.5.5"
bytes = "1.5.0"
ntapi = "0.4.1"
libc = "0.2.149"
winapi = "0.3.9"
anyhow = "1.0.75"
chrono = "0.4.31"
futures = "0.3.29"
bollard = "0.15.0"
termcolor = "1.3.0"
macros-rs = "0.4.0"
indicatif = "0.17.7"
tokio-util = "0.7.10"
tungstenite = "0.20.1"
serde_json = "1.0.108"
futures-core = "0.3.29"
futures-util = "0.3.29"
serde_derive = "1.0.190"
text_placeholder = "0.5.0"
tokio = { version = "1.33.0", features = ["full"] }
serde = { version = "1.0.192", features = ["derive"] }
rocket = { version = "0.5.0", features = ["json", "msgpack"] }
rocket_ws = "0.1.0"
pretty_env_logger = "0.5.0"
